# turboadam

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/results/: experiment-log.md
experiments/: ablation.py  baseline.py  train_turboadam.py
experiments/results/: baseline_log.jsonl
scripts/: analyze_control.py  benchmark_speed.py  plot_results.py  profile_memory.py
src/turboadam/: __init__.py  costate.py  oneq.py  optimizer.py  quantize.py  svd.py  triton_kernels.py  utils.py
tests/: test_costate.py  test_oneq.py  test_optimizer.py  test_quantize.py  test_roundtrip.py  test_svd.py  test_triton_costate.py  test_triton_smoke.py  test_triton_v.py  test_utils.py
