[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboadam"
version = "0.1.0"
description = "2x training memory reduction via optimizer state compression"
authors = [{ name = "David Kogan", email = "davidkny22@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "matplotlib>=3.8.0",
    "datasets>=2.18.0",
    "transformers>=4.40.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
