[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboadam"
version = "0.1.0"
description = "Drop-in Adam/AdamW replacement with 6.5× optimizer-state memory reduction. One line change, no model modifications. Compresses both moments in-place during training with bounded per-element error guarantees."
readme = "README.md"
authors = [{ name = "David Kogan", email = "davidkny22@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
triton = ["triton>=2.2.0"]
dev = [
    "pytest>=8.0.0",
    "matplotlib>=3.8.0",
    "datasets>=2.18.0",
    "transformers>=4.40.0",
]

[project.urls]
Homepage = "https://github.com/davidkny22/turboadam"
Repository = "https://github.com/davidkny22/turboadam"
Issues = "https://github.com/davidkny22/turboadam/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
